<resources>
	<string name="app_name">Driver Application</string>
	<string name="prompt_phone_number">Nhập số điện thoại</string>
	<string name="prompt_password">Nhâp mật khẩu</string>
	<string name="action_sign_in">Đăng nhập</string>
	<string name="error">Lỗi</string>
	<string name="description_map_screen">Đặt xe</string>
	<string name="channel_id">channel2</string>

	//Info driver fragment
	<string name="start_date">Gia nhập </string>
	<string name="grab_bike">GrabBike</string>
	<string name="grab_car">GrabCar</string>
	<string name="book_vehicle">Đặt xe</string>
	<string name="distance_to_you">Khoảng cách đến chỗ bạn: </string>
	<string name="time_to_you">Thời gian đến chỗ bạn: </string>

	//Find place fragment
	<string name="time_to_move">Thời gian di chuyển: </string>
	<string name="distance_length">Khoảng cách: </string>
	<string name="confirm_book_driver">Bạn có muốn đặt cuốc xe này chứ?</string>
	<string name="ok">OK</string>
	<string name="cancel">Huỷ bỏ</string>

	//Login Activity
	<string name="sign_up"><u>Đăng ký</u></string>
	<string name="login_false">Lỗi đăng nhập</string>

	//SignUp Activity
	<string name="country_code_default">+84</string>
	<string name="hint_phone_number">87654321</string>
	<string name="next">Tiếp</string>
	<string name="description_input_phone_number">Nhập số di động của bạn</string>
	<string name="description_input_password">Nhập mật khẩu</string>
	<string name="description_input_info">Nhập thông tin cá nhân</string>
	<string name="input_name">Nhập họ và tên của bạn</string>
	<string name="hint_input_name">Trần Văn Nam</string>
	<string name="sex">Chọn giới tính</string>
	<string name="male">Nam</string>
	<string name="female">Nữ</string>
	<string name="input_age">Nhập tuổi</string>
	<string name="hint_input_age">24</string>
	<string name="error_input_name">Bạn chưa nhập họ và tên</string>
	<string name="error_input_age">Bạn chưa nhập tuổi</string>
	<string name="error_phone_number_invalid">Số điện thoại không hợp lệ</string>
	<string name="error_password_invalid">Mật khẩu không hợp lệ</string>
	<string name="connect_server_error">Lỗi kết nối máy chủ</string>
	<string name="no_account">Tài khoản không đúng</string>

	// Input vehicle
	<string name="description_input_vehicle">Nhập thông tin xe</string>
	<string name="choose_type_driver">Chọn loại xe</string>
	<string name="input_type_vehicle">Nhập dòng xe</string>
	<string name="hint_input_type_vehicle">Honda Wawe</string>
	<string name="input_license_plate_number">Biển số xe</string>
	<string name="hint_input_license_plate_number">17B1-16315</string>
	<string name="error_input_type_vehicle">Bạn chưa nhập dòng xe</string>
	<string name="error_input_license_plate_number">Bạn chưa nhập biển số xe</string>

	//Book Fragment
	<string name="description_info">Có người đặt xe</string>
	<string name="name">Họ tên</string>
	<string name="start_address">Nơi đón: </string>
	<string name="end_address">Điểm đến: </string>
	<string name="distance">Quãng đường: </string>
	<string name="price">Giá tiền: </string>
	<string name="pick_up">Nhận cuốc</string>
	<string name="desciption_book">Thông tin chuyến xe</string>

	// Going Fragment
	<string name="description_arrived_origin">Đang đón khách hàng</string>
	<string name="arrived_origin">Đã đến nơi đón</string>
	
	<string name="description_waiting_user">Đang chờ khách hàng</string>
	<string name="going">Bắt đầu chuyến đi</string>
	
	<string name="description_going">Đang thực hiện cuốc xe</string>
	<string name="arrived_destination">Đã đến điểm đến</string>

	<string name="description_final_book">Kết thúc chuyến đi</string>
	<string name="bill">Tính tiền</string>

	<string name="user_cancel_book">Khách hàng huỷ chuyến xe</string>

	// Bill Fragment
	<string name="description_bill_fragment">Thông tin chuyến xe</string>
	<string name="received_money">Bạn đã nhận tiền</string>

	// Account Info Fragment
	<string name="age_info">Tuổi: %s</string>
	<string name="sex_info">Giới tính: %s</string>
	<string name="phone_number_info">Số điện thoại: %s</string>
	<string name="start_date_info">Ngày gia nhập: %s</string>
</resources>