<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="viewModel"
			type="com.example.driverapplication.viewmodel.MainViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white"
		android:padding="20dp">

		<LinearLayout
			android:id="@+id/layout_info_driver"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintTop_toTopOf="parent">

			<TextView
				android:id="@+id/description"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textColor="@color/color_black"
				android:textSize="@dimen/text_size_description"
				android:textStyle="bold"
				tools:text="@string/description_arrived_origin"/>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/layout_info_user"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="20dp"
				android:gravity="start">

				<TextView
					android:id="@+id/name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@{viewModel.bookInfo.name}"
					android:textColor="@color/color_black"
					android:textSize="@dimen/text_size_name"
					android:textStyle="bold"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					tools:text="Tran Van Nam" />

				<ImageView
					android:id="@+id/dot1"
					android:layout_width="10dp"
					android:layout_height="10dp"
					android:layout_gravity="center"
					android:layout_marginStart="@dimen/margin_start_with_info"
					android:src="@drawable/black_circle"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toEndOf="@id/name" />

				<TextView
					android:id="@+id/sex"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/margin_start_with_info"
					android:text="@{viewModel.bookInfo.sex}"
					android:textColor="@color/color_black"
					android:textSize="@dimen/text_size_name"
					android:textStyle="bold"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toEndOf="@id/dot1"
					tools:text="Nam" />

				<ImageView
					android:id="@+id/dot2"
					android:layout_width="10dp"
					android:layout_height="10dp"
					android:layout_gravity="center"
					android:layout_marginStart="@dimen/margin_start_with_info"
					android:src="@drawable/black_circle"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toEndOf="@id/sex"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/margin_start_with_info"
					android:text="@{Integer.toString(viewModel.bookInfo.age)}"
					android:textColor="@color/color_black"
					android:textSize="@dimen/text_size_name"
					android:textStyle="bold"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toEndOf="@id/dot2"
					tools:text="24" />

				<ImageView
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_gravity="center"
					android:src="@drawable/phone_call"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

			</androidx.constraintlayout.widget.ConstraintLayout>

			<LinearLayout
				android:id="@+id/layout_start_address"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="10dp"
				android:gravity="start"
				android:orientation="horizontal">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/start_address"
					android:textColor="@color/color_child_info_driver"
					android:textSize="@dimen/text_size_info" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@{viewModel.bookInfo.startAddress}"
					android:textColor="@color/color_child_info_driver"
					android:textSize="@dimen/text_size_info"
					tools:text="116 Lương Thế Vinh" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/layout_end_address"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="10dp"
				android:gravity="start"
				android:orientation="horizontal">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/end_address"
					android:textColor="@color/color_child_info_driver"
					android:textSize="@dimen/text_size_info" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@{viewModel.bookInfo.endAddress}"
					android:textColor="@color/color_child_info_driver"
					android:textSize="@dimen/text_size_info"
					tools:text="1 Lương Thế Vinh" />
			</LinearLayout>
		</LinearLayout>

		<Button
			android:id="@+id/btnArrived"
			style="@style/Widget.Button.Simple"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:background="@drawable/button_style"
			android:paddingStart="16dp"
			android:paddingEnd="16dp"
			app:layout_constraintTop_toBottomOf="@id/layout_info_driver"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			tools:text="@string/arrived_origin"/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>